// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ListTitle /> should render title in a link 1`] = `
.c2 {
  position: absolute;
  background-color: #7994d4;
  border-radius: 0.6rem;
  top: 0;
  left: 50%;
  width: 7rem;
  height: 0.4rem;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.c1 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-top: 1.6rem;
  text-align: center;
}

.c0 {
  margin: 0 auto 1rem;
  margin-bottom: 1.6rem;
  text-align: center;
}

.c3 {
  color: #2f3b6c;
  font-weight: normal;
  font-family: "Merriweather",serif;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3:hover {
  color: #2f3b6c;
}

@media (max-width:600px) {
  .c1 {
    font-size: 2.2rem;
  }
}

@media (max-width:600px) {
  .c0 {
    margin-bottom: 1rem;
  }
}

<div>
  <header
    class="c0"
  >
    <h2
      class="c1"
    >
      <div
        class="c2"
      />
      <a
        class="c3"
        href="https://code.travail.gouv.fr"
      >
        Lorem Ipsum
      </a>
    </h2>
    
  </header>
</div>
`;

exports[`<ListTitle /> should render title only 1`] = `
.c2 {
  position: absolute;
  background-color: #7994d4;
  border-radius: 0.6rem;
  top: 0;
  left: 50%;
  width: 7rem;
  height: 0.4rem;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.c1 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-top: 1.6rem;
  text-align: center;
}

.c0 {
  margin: 0 auto 1rem;
  margin-bottom: 1.6rem;
  text-align: center;
}

@media (max-width:600px) {
  .c1 {
    font-size: 2.2rem;
  }
}

@media (max-width:600px) {
  .c0 {
    margin-bottom: 1rem;
  }
}

<div>
  <header
    class="c0"
  >
    <h2
      class="c1"
    >
      <div
        class="c2"
      />
      Lorem Ipsum
    </h2>
    
  </header>
</div>
`;

exports[`<ListTitle /> should render title with description 1`] = `
.c2 {
  position: absolute;
  background-color: #7994d4;
  border-radius: 0.6rem;
  top: 0;
  left: 50%;
  width: 7rem;
  height: 0.4rem;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.c1 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-top: 1.6rem;
  text-align: center;
}

.c0 {
  margin: 0 auto 1rem;
  margin-bottom: 1.6rem;
  text-align: center;
}

@media (max-width:600px) {
  .c1 {
    font-size: 2.2rem;
  }
}

@media (max-width:600px) {
  .c0 {
    margin-bottom: 1rem;
  }
}

<div>
  <header
    class="c0"
  >
    <h2
      class="c1"
    >
      <div
        class="c2"
      />
      Lorem Ipsum
    </h2>
    
  </header>
</div>
`;
